Web platform polish

--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,12 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="My entry for Flutter Puzzle Hack">
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#FB7102">
+
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FB7102">
   <meta name="apple-mobile-web-app-title" content="materia_optima">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
